<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:scrollbarAlwaysDrawVerticalTrack="true"
 	android:scrollbarFadeDuration="0"
	>
	<LinearLayout
	  android:orientation="vertical"
	  android:layout_width="match_parent"
	  android:layout_height="match_parent"
	  android:scrollbarAlwaysDrawVerticalTrack="true"
	  >
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/settings_name"
			>
		</TextView>
	    <EditText
			android:id="@+id/settings_userName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			>
	        <requestFocus></requestFocus>
	    </EditText>
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/settings_user_email"
			>
		</TextView>
	    <EditText
			android:id="@+id/settings_userEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textEmailAddress"
			>
		</EditText>
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/settings_default_recipient_email"
			>
		</TextView>
	    <LinearLayout
	    	android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			>
		    <EditText
				android:id="@+id/settings_recipientEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:inputType="textEmailAddress"
				>
			</EditText>
		    <Button
				android:id="@+id/settings_recipientEmail_select_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/select"
				>
			</Button>
	    </LinearLayout>
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/weight_unit"
			>
		</TextView>
	    <RadioGroup
			android:id="@+id/settings_weight_display_option"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
	        <RadioButton
				android:id="@+id/settings_pounds"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:checked="true"
				android:text="@string/pounds"
				>
			</RadioButton>
	        <RadioButton
				android:id="@+id/settings_kilograms"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/kilograms"
				>
			</RadioButton>
	    </RadioGroup>
	</LinearLayout>
</ScrollView>
