<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<LinearLayout
	  android:orientation="vertical"
	  android:layout_width="match_parent"
	  android:layout_height="match_parent">
	    <TextView
			android:id="@+id/weight_entry_title_entryTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/new_entry_time"
			>
		</TextView>
	    <LinearLayout
	    	android:orientation="horizontal"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    >
	        <Button
		        android:id="@+id/weight_entry_dateDisplay"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="28sp"
		        android:text="date"
		        >
	        </Button>
	        <Button
		        android:id="@+id/weight_entry_timeDisplay"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:textSize="28sp"
		        android:text="time"
		        >
	        </Button>
	    </LinearLayout>
	    <TextView
	    	android:id="@+id/weight_entry_weight_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/weight_pounds"
			>
		</TextView>
	    <EditText
			android:id="@+id/weight_entry_weight_editText"
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			>
	        <requestFocus></requestFocus>
	    </EditText>
	    <LinearLayout
		    android:orientation="horizontal"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
	    	>
		    <Button
				android:id="@+id/weight_entry_saveButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/save"
				>
			</Button>
		    <Button
				android:id="@+id/weight_entry_deleteButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:enabled="false"
				android:text="@string/delete"
				>
			</Button>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
